--- a/docs/applab/applab.css
+++ b/docs/applab/applab.css
@@ -17,7 +17,7 @@
 body {
   font-family: "Gotham 4r", sans-serif, sans-serif;
   font-weight: normal;
-  background-color: #000000;
+  background-color: #0000ff;
   font-weight: normal;
   margin-top: 0; }
 
