--- a/docs/applab/applab.css
+++ b/docs/applab/applab.css
@@ -17,7 +17,7 @@
 body {
   font-family: "Gotham 4r", sans-serif, sans-serif;
   font-weight: normal;
-  background-color: #0000ff;
+  background-color: #F2F2F2;
   font-weight: normal;
   margin-top: 0; }
 
@@ -1657,7 +1657,7 @@ a.WireframeButtons_active, div.WireframeButtons_active {
   outline: none;
   position: relative;
   z-index: 1;
-  background-color: rgb(37, 37, 37);
+  background-color: white;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -1955,7 +1955,7 @@ div#visualizationResizeBar {
 #divApplab {
   position: relative;
   z-index: 1;
-  background-color: rgb(51, 51, 51); }
+  background-color: white; }
 
 #designModeViz {
   overflow: visible; }
